# rustlang-projects

./: README.md
actix_postgres/: .env.example  .gitignore  Cargo.toml  README.md  compose.yml
actix_postgres/migrations/: 20260301063356_create_users.sql
actix_postgres/src/: db.rs  main.rs
actix_postgres/src/routes/: users.rs
ahmerdev/: .env.example  .gitignore  Cargo.toml  build.sh  profile.example.json  start.sh
ahmerdev/src/: main.rs
ahmerdev/ui/: nuxt.config.ts  package-lock.json  package.json
ahmerdev/ui/app/: app.vue
ahmerdev/ui/app/assets/css/: main.css
ahmerdev/ui/app/components/: AppTask.vue
ahmerdev/ui/app/pages/: index.vue  tasks.vue
ahmerdev/ui/app/pages/notes/: [id].vue  index.vue
ahmerdev/ui/app/pages/tasks/: index.vue
airtable_sync/: .env.example  .gitignore  Cargo.toml  README.md
airtable_sync/src/: main.rs
array_creator/: Cargo.toml  README.md
array_creator/src/: main.rs
audio_output/: .gitignore  Cargo.toml
audio_output/src/: main.rs
axum_projects/: README.md
axum_projects/axum_1/: Cargo.toml
axum_projects/axum_10/: Cargo.toml  README.md
axum_projects/axum_2/: Cargo.toml
axum_projects/axum_3/: Cargo.toml
axum_projects/axum_4/: Cargo.toml  README.md
axum_projects/axum_5/: Cargo.toml  README.md
axum_projects/axum_6/: Cargo.toml  README.md
axum_projects/axum_7/: Cargo.toml  README.md
axum_projects/axum_8/: Cargo.toml  README.md
axum_projects/axum_9/: Cargo.toml  README.md
axum_projects/axum_blog/: .env.example  .gitignore  Cargo.toml  compose.yml
axum_projects/axum_blog/src/: main.rs
axum_projects/jwt_login/: Cargo.toml
axum_projects/jwt_login/src/: main.rs
city_long_lat/: .gitignore  Cargo.toml  README.md
city_long_lat/backup/: adjust.rs  final.rs  input.rs  search.rs
city_long_lat/nuxt/: .env.example  nuxt.config.ts  package-lock.json  package.json
city_long_lat/src/: main.rs
ddos/: Cargo.toml
ddos/src/: main.rs
enums_practice/src/: derive.rs  generic.rs  implement.rs  main.rs  trait.rs
headless_chrome_scrapper/: .gitignore  Cargo.toml  info.json
headless_chrome_scrapper/pocketbase/: info.txt
headless_chrome_scrapper/pocketbase/pb_migrations/: 1762151609_created_files.js
headless_chrome_scrapper/src/: gen.rs  parser.rs
json-validator/: Cargo.toml  user.json
json-validator/src/: main.rs
jwt/: Cargo.toml
jwt/src/: main.rs
mac-address-getter-rust/: .gitignore  Cargo.toml  README.md
mac-address-getter-rust/src/: main.rs
mspc/logger/: Cargo.toml
mspc/queue_thread_pool/: Cargo.toml
mspc/simple_chat/: Cargo.toml
mspc/web_scrapper/: Cargo.toml
peer_to_peer_chat_app/: Cargo.toml
peer_to_peer_chat_app/src/: ai.rs  main.rs
serde_paractice/serde_1/: Cargo.toml
serde_paractice/serde_2/: Cargo.toml
serde_paractice/serde_3/: Cargo.toml
serde_paractice/serde_4/: Cargo.toml
simple_file_reader/: Cargo.toml  text.txt
sqlite_quries/: .gitignore  Cargo.toml
sqlite_todo/: Cargo.toml  README.md
sqlx_pagination/: .gitignore  Cargo.toml  compose.yml
sqlx_pagination/src/: main.rs
target_finder/: .gitignore  Cargo.toml
tcp_file_share/: Cargo.toml  client.rs  file.txt
tcp_redis_client_server/: Cargo.toml  client  client.rs
tcp_server/: 404.html  contact.html  index.html
tcp_sqlite_swarm/: .env.example  .gitignore  Cargo.toml  README.md  client.rs
tcp_stream/: Cargo.toml  index.html
totp_app/: Cargo.toml
totp_generator_qith_qr/: Cargo.toml
uuid_nuxt/: Cargo.toml  README.md  build.sh  start.sh
uuid_nuxt/src/: main.rs
uuid_nuxt/ui/: nuxt.config.ts  package-lock.json  package.json
uuid_nuxt/ui/app/: app.vue
uuid_nuxt/ui/app/assets/css/: tailwind.css
voice_server/: Cargo.toml  README.md  index.html
webcam_frame/: Cargo.toml  README.md
webcam_web/: Cargo.toml  README.md  index.html
(+41 files in other folders)
