[package]
name = "actix_postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
