[package]
name = "ahmerdev"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = "8"
mime_guess = "2"
tower-http = { version = "0.6", features = ["fs"] }

[[bin]]
name = "ahmerdev"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
