[package]
name = "airtable_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
actix-rt = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
