[package]
name = "headless"
version = "0.1.0"
edition = "2024"

[dependencies]
headless_chrome = "1.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_xlsxwriter = "0.76"
scraper = "0.24.0"
tokio = { version = "1.0", features = ["full"] }
glob = "0.3.3"
chrono = "0.4.42"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
