[package]
name = "uuid_nuxt"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web= "4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = { version = "1.19.0", features = ["v4"]}
rand = "0.9.1"
tokio = { version = "1", features = ["fs", "io-util"] }
actix-files = "0.6"
rust-embed = "8"
mime_guess = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true