[package]
name = "axum_blog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6", features = ["fs"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
] }
dotenvy = "0.15.7"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
