[package]
name = "jwt_login"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
chrono = "0.4"
dotenv = "0.15"
